Fixed layout issues - Luka

--- a/static/css/HomeStyle.css
+++ b/static/css/HomeStyle.css
@@ -1,50 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
-*{
-  font-family: "PT Sans", sans-serif;
-}
-
-body{
-  margin: 0;
-}
-
-header{
+#Parent{
   position: relative;
   width: 100%;
   height: calc(min(max(100px, 30vh), 350px));
   background-image: linear-gradient(
     rgba(0, 0, 0, .4),
     rgba(0, 0, 0, .4)
-	/* this doesnt work */
-  ), url("{% static 'images/Background.png' %}");
+  ), url("../Images/Background.png");
   background-position: center;
 }
-
-#ButtonsWrapper{
-  display: flex;
-  flex-direction: row-reverse;
-  width: 100%;
+#WebsiteTitle{
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: calc(min(50%, 69% - 220px));
+  top: 50%;
+  font-size: 28px;
+  color: white;
+  margin: 0px;
 }
-#ButtonsWrapper > div{
-  margin: 8px 8px 8px 0;
-  padding: 8px;
-
-  text-align: center;
-  font-weight: bold;
-  font-size: 20px;
-  min-width: 100px;
-
-  background-color: #ffffff7f;
-  backdrop-filter: blur(3px);
-  user-select: none;
-  cursor: pointer;
-}
-#ButtonsWrapper > div:hover{
-  filter: brightness(.85);
-}
-#ButtonsWrapper > div:active{
-  filter: brightness(.7);
-}
-
 #WebsiteTitleWrapper{
   position: absolute;
   top: 50%;
@@ -53,7 +25,7 @@ header{
   transform: translate(-50%, -50%);
   color: #ffffffff;
 }
-#WebsiteTitle{
+#WelcomeTitle{
   text-align: center;
   font-size: 56px;
   margin: 10px 0 10px 0;
@@ -138,33 +110,4 @@ main > div > *{
 }
 main > div > div > h2{
   margin: 5px 0 5px 0;
-}
-
-#PageContainer{
-  position: relative;
-  min-height: 100vh;
-}
-#PageContentWrapper{
-  padding-bottom: 200px;
-}
-footer{
-  background-color: #000000ff;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 200px;
-}
-footer > h1{
-  text-align: center;
-  color: #ffffffff;
-}
-#SocialMediaWrapper{
-  display: flex;
-  justify-content: center;
-}
-#SocialMediaWrapper > img{
-  width: 48px;
-  height: 48px;
-  margin: 10px;
-  cursor: pointer;
 }
